# latent-logic

./: LICENSE  NOTICES.md  README.md  SECURITY.md  pyproject.toml
latent_logic/: __init__.py  __main__.py  generator.py  knowledge.py  solver.py  state.py  system.py
tests/: test_generator.py  test_knowledge.py  test_solver.py  test_state.py
